@@ -3,10 +3,12 @@ autogroup overlay Readme
 DESCRIPTION
     The autogroup overlay allows automated updates of group memberships which
     meet the requirements of any filter contained in the group definition.
-	The filters are built from LDAP URI-valued attributes. Any time an object
-	is added/deleted/updated, it is tested for compliance with the filters,
+    The filters are built from LDAP URI-valued attributes. Any time an object
+    is added/deleted/updated, it is tested for compliance with the filters,
     and its membership is accordingly updated. For searches and compares
     it behaves like a static group.
+    If the attribute part of the URI is filled, the group entry is populated
+    by the values of this attribute in the entries resulting from the search.
 
 BUILDING
     A Makefile is included.
@@ -67,6 +69,11 @@ EXAMPLE
 CAVEATS
     As with static groups, update operations on groups with a large number
     of members may be slow.
+    If the attribute part of the URI is specified, modify and delete operations
+    are more difficult to handle. In these cases the overlay will try to detect
+    if groups have been modified and then simply refresh them. This can cause
+    performance hits if the search specified by the URI deals with a significant
+    number of entries.
 
 ACKNOWLEDGEMENTS
     This module was originally written in 2007 by Michał Szulczyński.
